Some layout bugs were fixed

--- a/src/index.scss
+++ b/src/index.scss
@@ -194,6 +194,33 @@
   @extend .ol-blend-darken;
 }
 
+// Item Counter styles
+.counter-parent {
+  counter-reset: li;
+}
+
+.counter-item {
+  position: relative;
+
+  &::before {
+    position: absolute;
+    top: 0.75rem;
+    left: 0.75rem;
+    display: block;
+    width: 2.5rem;
+    height: 2.5rem;
+    padding: 0.75rem 0.5rem;
+    border-radius: 50%;
+    background: var(--color-red);
+    line-height: 1;
+    font-size: 1rem;
+    // text-align: center;
+    color: var(--color-navy);
+    counter-increment: li;
+    content: '0' counter(li);
+  }
+}
+
 // Swiper styles
 .swiper {
   margin: -3.125rem 0;
